--- a/index.html
+++ b/index.html
@@ -1,59 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Junk Food Awareness</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>The Dark Side of Junk Food</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  </head>
+  
 <body>
-
-  <header>
-    <h1>Say No to Junk Food!</h1>
+ <header>
+    <h1>The Dark Side of Junk Food</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">Facts</a></li>
-        <li><a href="#">Healthy Choices</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Hidden Ingredients</a></li>
+        <li><a href="#">Alternatives</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <section>
-      <h2>Welcome to Our Awareness Campaign</h2>
+    <section class="feature">
+      <h2>Hidden Ingredients in Junk Food</h2>
+      <img src="images/hidden-ingredients.jpg" alt="Hidden ingredients in junk food">
       <p>
-        Junk food is convenient, cheap, and tasty – but it comes with serious health risks. Our mission is to spread awareness about the harmful effects of junk food and promote healthy eating habits for all age groups. Whether you're a student, a parent, or just someone trying to eat better, this website is for you.
+        Many junk foods contain hidden ingredients that can negatively affect your health. These ingredients are often added to improve taste, texture, color, or shelf life, but come with potential health risks.These additives are not always easily understood by the average consumer and are usually buried in long ingredient lists. Some ingredients can cause allergic reactions, disrupt hormones, or increase the risk of chronic diseases. Unfortunately, food companies may use misleading labels or marketing terms like "natural flavors" to mask the use of synthetic chemicals and preservatives.
       </p>
-    </section>
-
-    <section>
-      <h2>Why This Project Matters</h2>
       <p>
-        In today's fast-paced world, unhealthy eating has become a common habit. Junk food is loaded with sugars, salts, and unhealthy fats that can lead to obesity, diabetes, heart disease, and other long-term health problems. This website was created as part of a group project to educate our community and encourage small, meaningful changes in daily food choices.
+        Some ingredients can cause allergic reactions, disrupt hormones, or increase the risk of chronic diseases. Unfortunately, food companies may use misleading labels or marketing terms like "natural flavors" to mask the use of synthetic chemicals and preservatives.
       </p>
-    </section>
-
-    <section>
-      <h2>What You’ll Learn</h2>
       <ul>
-        <li>Shocking facts about junk food ingredients and consumption</li>
-        <li>Real health impacts backed by science</li>
-        <li>Simple, affordable alternatives to junk food</li>
-        <li>Tips on reading food labels and making smart choices</li>
+        <li><strong>Monosodium Glutamate (MSG)</strong> – Used to enhance flavor but may trigger headaches and nausea in sensitive individuals.</li>
+        <li><strong>High Fructose Corn Syrup</strong> – A sweetener linked to obesity and liver issues.</li>
+        <li><strong>Artificial Dyes (Red 40, Yellow 5, etc.)</strong> – Found in candies and snacks; some are linked to hyperactivity in children.</li>
+        <li><strong>Trans Fats</strong> – Used in fried and baked goods; increases bad cholesterol and risk of heart disease.</li>
+        <li><strong>Sodium Nitrate/Nitrite</strong> – Preservatives used in processed meats that may be linked to cancer.</li>
       </ul>
-    </section>
-
-    <section>
-      <h2>Who We Are</h2>
       <p>
-        We are a group of students from Humber Polytechnic College working together on this awareness campaign to highlight how small dietary changes can lead to a healthier future. Our goal is to create a clean, informative, and inspiring platform for everyone.
+        Reading food labels carefully and choosing fresh, whole foods can help reduce the intake of these hidden ingredients. Being aware of what's really in your food is the first step toward a healthier lifestyle.
       </p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Junk Food Awareness Project | Created by Students of Humber Polytechnic College</p>
+    <p>&copy; 2025 The Dark Side of Junk Food | All rights reserved.</p>
   </footer>
 
 </body>
